button flickering bug fix

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -53,7 +53,7 @@ html {
   padding: 10px 15px;
 
   cursor: pointer;
-  transition: 0.4s all ease-in-out;
+  transition: 200ms all linear;
 
   color: $black;
   border: 2px solid $black;
@@ -62,6 +62,8 @@ html {
 
   font-size: 18px;
   font-weight: 700;
+
+  -webkit-backface-visibility: hidden;
 
   &::before {
     position: absolute;
@@ -74,7 +76,7 @@ html {
     padding: 23px 35px;
 
     content: '';
-    transition: 0.4s all ease-in-out;
+    transition: 200ms all linear;
 
     border: 2px solid $black;
     outline: none !important;
@@ -135,19 +137,7 @@ a.btn-primary {
   color: $black;
 }
 
-//dark primary
 
-a.btn-primary--dark {
-  color: $white;
-}
-.btn-primary--dark {
-  border: 2px solid $white;
-  background-color: $black;
-
-  &::before {
-    border: 2px solid $white;
-  }
-}
 
 // section title
 .title--section {
